Add software volume control to I2S DAC

--- a/config/asound.conf
+++ b/config/asound.conf
@@ -1,14 +1,23 @@
-# i2s sndrpihifiberry
-pcm.ch0 {
-    type plug # autonegotiate connection bitrates/mono/stereo
-    slave {
-      pcm "hw:sndrpihifiberry,0"
-    }
+# Default to playing to source 0
+pcm.!default {
+    type plug
+    slave.pcm       "ch0"
 }
 
-ctl.ch0 {
-   type hw
-   card sndrpihifiberry
+# I2S sndrpihifiberry
+pcm.i2sdac {
+    type plug # Autonegotiate connection bitrates/mono/stereo
+    slave.pcm       "hw:sndrpihifiberry,0"
+}
+
+# Use softvol since the DAC doesn't have volume support
+pcm.ch0 {
+    type            softvol
+    slave.pcm       "i2sdac"
+    control {
+        name        "Master Playback Volume"
+        card        sndrpihifiberry
+    }
 }
 
 # USB
