Determined max DAC levels

--- a/config/asound.conf
+++ b/config/asound.conf
@@ -4,9 +4,9 @@ pcm.!default {
     slave.pcm       "ch0"
 }
 
-# I2S sndrpihifiberry
+# Use plug to autonegotiate connection bitrate and mono/stereo
 pcm.i2sdac {
-    type plug # Autonegotiate connection bitrates/mono/stereo
+    type            plug
     slave.pcm       "hw:sndrpihifiberry,0"
 }
 
@@ -19,8 +19,19 @@ pcm.ch0 {
         card        sndrpihifiberry
     }
 }
+# TODO: Set max to 219/255 [86%] [-7.20dB]
+# amixer -D ch0 sset Master 219
+# DAC pk-pk output: 2.2V
+
+ctl.ch0 {
+    type            hw
+    card            sndrpihifiberry
+}
 
 # USB
+# TODO: Set max to 122/197 [62%] [-14.06dB]
+# amixer -D usb71 sset Speaker 122
+# DAC pk-pk output: 2.2V
 pcm.usb71 {
     type hw
     card cmedia8chint
@@ -35,12 +46,12 @@ pcm.dmixer {
     type dmix
     ipc_key 1024
     ipc_perm 0666
-    slave.pcm "usb71"
     slave {
+        pcm         "usb71"
         period_time 0
         period_size 1024
         buffer_size 4096
-        channels 8
+        channels    8
     }
     bindings {
         0 0
@@ -54,23 +65,22 @@ pcm.dmixer {
     }
 }
 
-pcm.!default {
-    type plug
-    slave {
-        pcm "dmixer"
-        channels 8
-    }
-    ttable.0.0 1
-    ttable.1.1 1
-    ttable.0.2 1
-    ttable.1.3 1
-    ttable.0.4 1
-    ttable.1.5 1
-    ttable.0.6 1
-    ttable.1.7 1
-}
+#pcm.!default {
+#    type plug
+#    slave {
+#        pcm "dmixer"
+#        channels 8
+#    }
+#    ttable.0.0 1
+#    ttable.1.1 1
+#    ttable.0.2 1
+#    ttable.1.3 1
+#    ttable.0.4 1
+#    ttable.1.5 1
+#    ttable.0.6 1
+#    ttable.1.7 1
+#}
 
-### Controller v1
 pcm.ch1 {
     type plug
     slave {
@@ -79,7 +89,8 @@ pcm.ch1 {
     }
     ttable.0.6 1
     ttable.1.7 1
-}pcm.ch2 {
+}
+pcm.ch2 {
     type plug
     slave {
         pcm "dmixer"
@@ -87,7 +98,8 @@ pcm.ch1 {
     }
     ttable.0.0 1
     ttable.1.1 1
-}pcm.ch3 {
+}
+pcm.ch3 {
     type plug
     slave {
         pcm "dmixer"
@@ -96,46 +108,4 @@ pcm.ch1 {
     ttable.0.4 1
     ttable.1.5 1
 }
-
-### Old prototype configuration
-#
-##pcm.ch0 {
-##    type plug
-##    slave {
-##        pcm "dmixer"
-##        channels 8
-##    }
-##    ttable.0.4 1
-##    ttable.1.5 1
-##}
-##
-#
-#pcm.ch1 {
-#    type plug
-#    slave {
-#        pcm "dmixer"
-#        channels 8
-#    }
-#    ttable.0.0 1
-#    ttable.1.1 1
-#}
-#
-#pcm.ch2 {
-#    type plug
-#    slave {
-#        pcm "dmixer"
-#        channels 8
-#    }
-#    ttable.0.6 1
-#    ttable.1.7 1
-#}
-#
-#pcm.ch3 {
-#    type plug
-#    slave {
-#        pcm "dmixer"
-#        channels 8
-#    }
-#    ttable.0.2 1
-#    ttable.1.3 1
-#}
+# TODO: volume controls for individual channels?
