--- a/config/asound.conf
+++ b/config/asound.conf
@@ -1,27 +1,22 @@
 # Default to playing to source 0
 pcm.!default {
-    type plug
+    type            plug
     slave.pcm       "ch0"
 }
 
-# Use plug to autonegotiate connection bitrate and mono/stereo
+# Use softvol since the DAC doesn't have volume support
 pcm.i2sdac {
-    type            plug
+    type            softvol
     slave.pcm       "hw:sndrpihifiberry,0"
+    control.name    "Master Playback Volume"
+    control.card     sndrpihifiberry
+    max_dB          -7.2
 }
 
-# Use softvol since the DAC doesn't have volume support
 pcm.ch0 {
-    type            softvol
+    type            plug # autonegotiate connection bitrates/mono/stereo
     slave.pcm       "i2sdac"
-    control {
-        name        "Master Playback Volume"
-        card        sndrpihifiberry
-    }
 }
-# TODO: Set max to 219/255 [86%] [-7.20dB]
-# amixer -D ch0 sset Master 219
-# DAC pk-pk output: 2.2V
 
 ctl.ch0 {
     type            hw
@@ -29,23 +24,20 @@ ctl.ch0 {
 }
 
 # USB
-# TODO: Set max to 122/197 [62%] [-14.06dB]
-# amixer -D usb71 sset Speaker 122
-# DAC pk-pk output: 2.2V
 pcm.usb71 {
-    type hw
-    card cmedia8chint
+    type            hw
+    card            cmedia8chint
 }
 
 ctl.usb71 {
-    type hw
-    card cmedia8chint
+    type            hw
+    card            cmedia8chint
 }
 
 pcm.dmixer {
-    type dmix
-    ipc_key 1024
-    ipc_perm 0666
+    type            dmix
+    ipc_key         1024
+    ipc_perm        0666
     slave {
         pcm         "usb71"
         period_time 0
@@ -65,47 +57,74 @@ pcm.dmixer {
     }
 }
 
-#pcm.!default {
-#    type plug
-#    slave {
-#        pcm "dmixer"
-#        channels 8
-#    }
-#    ttable.0.0 1
-#    ttable.1.1 1
-#    ttable.0.2 1
-#    ttable.1.3 1
-#    ttable.0.4 1
-#    ttable.1.5 1
-#    ttable.0.6 1
-#    ttable.1.7 1
-#}
-
 pcm.ch1 {
-    type plug
-    slave {
-        pcm "dmixer"
-        channels 8
-    }
-    ttable.0.6 1
-    ttable.1.7 1
+    type            plug
+    slave.pcm       "dmixer"
+    slave.channels  8
+    ttable.0.6      0.63
+    ttable.1.7      0.63
 }
 pcm.ch2 {
-    type plug
-    slave {
-        pcm "dmixer"
-        channels 8
-    }
-    ttable.0.0 1
-    ttable.1.1 1
+    type            plug
+    slave.pcm       "dmixer"
+    slave.channels  8
+    ttable.0.0      0.63
+    ttable.1.1      0.63
 }
 pcm.ch3 {
-    type plug
-    slave {
-        pcm "dmixer"
-        channels 8
-    }
-    ttable.0.4 1
-    ttable.1.5 1
+    type            plug
+    slave.pcm       "dmixer"
+    slave.channels  8
+    ttable.0.4      0.63
+    ttable.1.5      0.63
 }
-# TODO: volume controls for individual channels?
+
+pcm.ch0123_multi {
+    type multi
+    slaves {
+        a.pcm       "ch0"
+        a.channels  2
+        b.pcm       "ch1"
+        b.channels  2
+        c.pcm       "ch2"
+        c.channels  2
+        d.pcm       "ch3"
+        d.channels  2
+    }
+    bindings {
+        0.slave     a
+        0.channel   0
+        1.slave     a
+        1.channel   1
+
+        2.slave     b
+        2.channel   0
+        3.slave     b
+        3.channel   1
+
+        4.slave     c
+        4.channel   0
+        5.slave     c
+        5.channel   1
+
+        6.slave     d
+        6.channel   0
+        7.slave     d
+        7.channel   1
+    }
+}
+
+# 1x stereo -> 4x stereo
+pcm.ch0123 {
+    type            route
+    slave.pcm       "ch0123_multi"
+    slave.channels  8
+    ttable.0.0      1
+    ttable.1.1      1
+    ttable.0.2      1
+    ttable.1.3      1
+    ttable.0.4      1
+    ttable.1.5      1
+    ttable.0.6      1
+    ttable.1.7      1
+}
