--- a/config/asound.conf
+++ b/config/asound.conf
@@ -1,3 +1,6 @@
+# AmpliPi ALSA config
+# Place in /etc/asound.conf
+
 # Default to playing to source 0
 pcm.!default {
     type            plug
@@ -10,11 +13,29 @@ pcm.i2sdac {
     slave.pcm       "hw:sndrpihifiberry,0"
     control.name    "Master Playback Volume"
     control.card     sndrpihifiberry
-    max_dB          -7.2
+
+    # Set the max_dB to avoid clipping on the negative side of the preamp's
+    # U2/U4/U6/U8 op-amps. The audio signal is centered at 2.5 V and the
+    # op-amps cleanly pass down to ~1.4V, so max (2.5 - 1.4) / sqrt(2)
+    # = 0.78 Vrms. Nominal (max_dB = 0) DAC output is ~1.7 Vrms.
+    # 20*log10(0.78/1.7) ~= -6.8 dBV
+    max_dB          -6.8
+
+    # For now leaving at -6.8 dB to maximize SNR before the amplifiers,
+    # and to leave some headroom for per-zone attenuation settings.
+    # If clipping of the amplifiers is to be fully avoided, reduce further:
+    # Max amp power output: 79 W @ 4 Ohms
+    # Max amp Vrms = sqrt(79*4) = 17.8 V = 25 dBV
+    # Amp gain = 32.8 dBV
+    # Max amp input = 25 dBV - 32.8 dBV = -7.8 dBV = 0.41 Vrms
+    # max_dB = 20*log10(0.41/1.7) = -12.4
+
 }
 
+# Create source 0 which streams to the softvol plugin.
+# Use type plug to autonegotiate connection bitrates/mono/stereo.
 pcm.ch0 {
-    type            plug # autonegotiate connection bitrates/mono/stereo
+    type            plug
     slave.pcm       "i2sdac"
 }
 
@@ -23,7 +44,7 @@ ctl.ch0 {
     card            sndrpihifiberry
 }
 
-# USB
+# CM6206 USB audio DAC/ADC
 pcm.usb71 {
     type            hw
     card            cmedia8chint
@@ -34,6 +55,8 @@ ctl.usb71 {
     card            cmedia8chint
 }
 
+# Only 1 client can use 'usb71' directly at a time.
+# The dmix plugin allows multiple client connections at a time and mixes them.
 pcm.dmixer {
     type            dmix
     ipc_key         1024
@@ -57,29 +80,35 @@ pcm.dmixer {
     }
 }
 
+# Create sources 1-3 as individual stereo streams
+# Attenuate to 64% before sending to mixer to avoid op-amp clipping
+#   Attenuate to 28% to avoid amplifier clipping
+#   For now leaving at 64% to maximize SNR before the amplifiers, and to leave
+#   some headroom for per-zone attenuation settings
 pcm.ch1 {
     type            plug
     slave.pcm       "dmixer"
     slave.channels  8
-    ttable.0.6      0.63
-    ttable.1.7      0.63
+    ttable.0.6      0.64
+    ttable.1.7      0.64
 }
 pcm.ch2 {
     type            plug
     slave.pcm       "dmixer"
     slave.channels  8
-    ttable.0.0      0.63
-    ttable.1.1      0.63
+    ttable.0.0      0.64
+    ttable.1.1      0.64
 }
 pcm.ch3 {
     type            plug
     slave.pcm       "dmixer"
     slave.channels  8
-    ttable.0.4      0.63
-    ttable.1.5      0.63
+    ttable.0.4      0.64
+    ttable.1.5      0.64
 }
 
-pcm.ch0123_multi {
+# Bind all 4 stereo sources into one 4-channel stereo stream
+pcm.ch0123_4ch {
     type multi
     slaves {
         a.pcm       "ch0"
@@ -114,10 +143,10 @@ pcm.ch0123_multi {
     }
 }
 
-# 1x stereo -> 4x stereo
+# Duplicate one stereo stream into one 4-channel stereo stream
 pcm.ch0123 {
     type            route
-    slave.pcm       "ch0123_multi"
+    slave.pcm       "ch0123_4ch"
     slave.channels  8
     ttable.0.0      1
     ttable.1.1      1
